@@ -14,6 +14,7 @@ Revision history for DBIx::Class
           opener: RT#99503)
         - Depend on newer Moo, fixing some interoperability issues:
           http://lists.scsys.co.uk/pipermail/dbix-class/2014-October/011787.html
+        - Fix intermittent failures in the LeakTracer on 5.18+
 
 0.082801 2014-10-05 23:55 (UTC)
     * Known Issues
